# rocPRIM

./: .gitignore  CHANGELOG.md  CMakeLists.txt  sporadic_1103_failure.md
benchmark/: CMakeLists.txt  benchmark_device_merge_inplace.cpp  benchmark_device_radix_sort.cpp  benchmark_device_radix_sort.hpp  benchmark_device_segmented_radix_sort_keys.cpp  benchmark_device_segmented_radix_sort_keys.parallel.hpp  benchmark_device_segmented_radix_sort_pairs.cpp  benchmark_device_segmented_radix_sort_pairs.parallel.cpp.in  benchmark_device_segmented_radix_sort_pairs.parallel.hpp
cmake/: VerifyCompiler.cmake
cmake/Modules/: rocprimDependencies.cmake  rocprimOptions.cmake
dockerfiles/: autotune.dockerfile  readme.md
docs/: CMakeLists.txt  conf.py  intrinsics.rst  ops_summary.rst
docs/.sphinx/: _toc.yml.in
docs/block_ops/: index.rst
docs/block_ops/ops_classes/: index.rst
docs/device_ops/: index.rst  merge.rst  partition.rst
docs/reference/: intrinsics.rst
docs/sphinx/: requirements.txt
docs/warp_ops/: index.rst
rocprim/include/rocprim/: rocprim.hpp
rocprim/include/rocprim/detail/: merge_path.hpp  various.hpp
rocprim/include/rocprim/device/: config_types.hpp  device_find_first_of.hpp  device_histogram.hpp  device_merge_inplace.hpp  device_merge_inplace_config.hpp  device_partial_sort.hpp  device_radix_sort.hpp  device_reduce.hpp  device_scan.hpp
rocprim/include/rocprim/device/detail/: device_config_helper.hpp  device_radix_sort.hpp  device_run_length_encode.hpp  device_scan.hpp  device_scan_common.hpp  device_segmented_radix_sort.hpp  lookback_scan_state.hpp
rocprim/include/rocprim/device/detail/config/: device_scan.hpp  device_segmented_radix_sort.hpp
rocprim/include/rocprim/intrinsics/: bit.hpp
scripts/autotune-search/: main.py  requirements.txt
test/rocprim/: CMakeLists.txt  test_device_adjacent_difference.cpp  test_device_find_first_of.cpp  test_device_merge_inplace.cpp  test_device_partial_sort.cpp  test_device_partition.cpp  test_device_scan.cpp  test_seed.hpp  test_utils_custom_test_types.hpp  test_utils_data_generation.hpp  test_warp_scan.hpp
